--- a/SynthExamples/ViewControllers/ButtonsViewController.xib
+++ b/SynthExamples/ViewControllers/ButtonsViewController.xib
@@ -30,6 +30,13 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61L-g5-uCP">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="783"/>
                             <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fiber_right" translatesAutoresizingMaskIntoConstraints="NO" id="77m-nX-y3v">
+                                    <rect key="frame" x="294" y="0.0" width="120" height="90"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="90" id="EdZ-0Y-AdA"/>
+                                        <constraint firstAttribute="width" secondItem="77m-nX-y3v" secondAttribute="height" multiplier="4:3" id="V7J-7w-cDn"/>
+                                    </constraints>
+                                </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buttons_text" translatesAutoresizingMaskIntoConstraints="NO" id="Nhs-8p-2Uj">
                                     <rect key="frame" x="0.0" y="40" width="414" height="74"/>
                                     <constraints>
@@ -160,6 +167,7 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="Bfp-bm-SyU" firstAttribute="leading" secondItem="Fum-tb-F1z" secondAttribute="leading" id="9kR-sO-8fY"/>
+                                <constraint firstItem="77m-nX-y3v" firstAttribute="top" secondItem="61L-g5-uCP" secondAttribute="top" id="ASE-ih-a21"/>
                                 <constraint firstItem="Bfp-bm-SyU" firstAttribute="trailing" secondItem="Fum-tb-F1z" secondAttribute="trailing" id="AVe-ce-q00"/>
                                 <constraint firstItem="yyJ-Ll-YBn" firstAttribute="top" secondItem="Bfp-bm-SyU" secondAttribute="bottom" constant="35" id="L7C-Hf-Bn0"/>
                                 <constraint firstItem="Bfp-bm-SyU" firstAttribute="top" secondItem="Fum-tb-F1z" secondAttribute="bottom" constant="35" id="M5Z-y0-kMP"/>
@@ -173,6 +181,7 @@
                                 <constraint firstAttribute="trailing" secondItem="Fum-tb-F1z" secondAttribute="trailing" constant="40" id="enF-eZ-CWa"/>
                                 <constraint firstAttribute="trailing" secondItem="Nhs-8p-2Uj" secondAttribute="trailing" id="lw2-pU-YVj"/>
                                 <constraint firstItem="Nhs-8p-2Uj" firstAttribute="top" secondItem="61L-g5-uCP" secondAttribute="top" constant="40" id="mgR-Kz-IRW"/>
+                                <constraint firstAttribute="trailing" secondItem="77m-nX-y3v" secondAttribute="trailing" id="nkK-ZQ-vLu"/>
                                 <constraint firstItem="Nhs-8p-2Uj" firstAttribute="leading" secondItem="61L-g5-uCP" secondAttribute="leading" id="pbj-FR-ENN"/>
                                 <constraint firstItem="Fum-tb-F1z" firstAttribute="top" secondItem="3II-Dh-boX" secondAttribute="bottom" constant="35" id="rXc-gh-BBH"/>
                             </constraints>
@@ -221,6 +230,7 @@
     <resources>
         <image name="buttons_text" width="366" height="148"/>
         <image name="cross" width="96" height="96"/>
+        <image name="fiber_right" width="931" height="693"/>
         <image name="type_1_text" width="58" height="20"/>
         <image name="type_2_text" width="60" height="20"/>
         <image name="type_3_text" width="60" height="20"/>
