--- a/SynthExamples/ViewControllers/GutterViewController.xib
+++ b/SynthExamples/ViewControllers/GutterViewController.xib
@@ -28,6 +28,12 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Rf-je-oR9">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="617.5"/>
                             <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fiber_right" translatesAutoresizingMaskIntoConstraints="NO" id="3FP-fW-MLT">
+                                    <rect key="frame" x="294" y="0.0" width="120" height="90"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="90" id="yhX-RD-zrs"/>
+                                    </constraints>
+                                </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gutter_text" translatesAutoresizingMaskIntoConstraints="NO" id="hQE-cW-LeU">
                                     <rect key="frame" x="0.0" y="40" width="414" height="74"/>
                                     <constraints>
@@ -88,11 +94,14 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="Ogp-b0-4dd" secondAttribute="trailing" constant="34" id="57O-xS-RQj"/>
+                                <constraint firstItem="3FP-fW-MLT" firstAttribute="top" secondItem="8Rf-je-oR9" secondAttribute="top" id="6oz-Jj-uPu"/>
                                 <constraint firstAttribute="bottom" secondItem="Ogp-b0-4dd" secondAttribute="bottom" id="ORr-uk-MkD"/>
                                 <constraint firstItem="hQE-cW-LeU" firstAttribute="top" secondItem="8Rf-je-oR9" secondAttribute="top" constant="40" id="QGe-0d-b2Z"/>
                                 <constraint firstItem="hQE-cW-LeU" firstAttribute="leading" secondItem="8Rf-je-oR9" secondAttribute="leading" id="Rfp-lh-qlJ"/>
+                                <constraint firstAttribute="trailing" secondItem="3FP-fW-MLT" secondAttribute="trailing" id="ZNr-4g-siZ"/>
                                 <constraint firstItem="Ogp-b0-4dd" firstAttribute="leading" secondItem="8Rf-je-oR9" secondAttribute="leading" constant="34" id="aTp-rj-erT"/>
                                 <constraint firstAttribute="trailing" secondItem="hQE-cW-LeU" secondAttribute="trailing" id="aZ3-a6-QNH"/>
+                                <constraint firstItem="3FP-fW-MLT" firstAttribute="width" secondItem="3FP-fW-MLT" secondAttribute="height" multiplier="4:3" id="iK5-iQ-Y1S"/>
                                 <constraint firstItem="Ogp-b0-4dd" firstAttribute="top" secondItem="hQE-cW-LeU" secondAttribute="bottom" constant="60" id="yWE-x7-OoF"/>
                             </constraints>
                         </view>
@@ -140,6 +149,7 @@
     <resources>
         <image name="cross" width="96" height="96"/>
         <image name="emboss_deboss_text" width="149" height="20"/>
+        <image name="fiber_right" width="931" height="693"/>
         <image name="gutter_text" width="298" height="148"/>
     </resources>
 </document>
